# bintra

./: Makefile  dune  fac.S  fac.asm  fac2.S  run.t  write.S
bintra/: CMakeLists.txt  main.cpp
cmake_build/: dune
